--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,12 @@
 apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
 
+apt {
+    arguments {
+        androidManifestFile variant.outputs[0].processResources.manifestFile
+        resourcePackageName 'com.mantra.chatatmantra'
+    }
+}
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
