--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.activities.TabActivity_"
-            android:label="@string/app_name"/>
+            android:label="@string/app_name"></activity>
+
+        <activity android:name=".Chat.ChatRoomActivity_"
+            android:label="@string/app_name"></activity>
 
     </application>
 
